# zenido

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
zenido/: main.py
zenido/api/: dependencies.py
zenido/api/v1/: auth_router.py
zenido/schemas/: auth_schemas.py
