[tool.poetry]
name = "zenido"
version = "0.1.0"
description = "Todo app"
authors = ["Zeniro <zeniro.codes@pm.me>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
